PROJECT(CSVUTILS)


SET(CSVUTILS_PACKAGE_VERSION_MAJOR 0)
SET(CSVUTILS_PACKAGE_VERSION_MINOR 9)
SET(CSVUTILS_PACKAGE_VERSION_PATCH 3)
SET(CSVUTILS_PACKAGE_VERSION_FULL "${CSVUTILS_PACKAGE_VERSION_MAJOR}.${CSVUTILS_PACKAGE_VERSION_MINOR}.${CSVUTILS_PACKAGE_VERSION_PATCH}")
SET(CPACK_PACKAGE_NAME "CSVUTILS")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "CSV file processing utils")

SET(CPACK_PACKAGE_VENDOR "")
SET(CPACK_PACKAGE_VERSION_MAJOR ${CSVUTILS_PACKAGE_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${CSVUTILS_PACKAGE_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${CSVUTILS_PACKAGE_VERSION_PATCH})
SET(CPACK_PACKAGE_CONTACT "rgamble99@gmail.com")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "libcvs-${CSVUTILS_PACKAGE_VERSION_FULL}")
SET(CPACK_MONOLITHIC_INSTALL ON)
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/README")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
SET(CPACK_PACKAGE_RELOCATABLE OFF)

cmake_minimum_required(VERSION 2.8)
enable_language(C)

# search for LIBCSV
find_library(LIBCSV_LIBRARY NAMES libcsv.a )
find_path (LIBCSV_INCLUDE NAMES  csv.h)

#INCLUDE(CTest)
#ENABLE_TESTING()

# TODO: search for PCRE or POSIX
ADD_DEFINITIONS(-DWITHOUT_POSIX -DWITHOUT_PCRE )


include_directories(${LIBCSV_INCLUDE} include)

ADD_LIBRARY(helpers src/helper.c src/version.c)

LINK_LIBRARIES(helpers ${LIBCSV_LIBRARY})


add_executable(
  csvbreak
  src/csvbreak.c)
add_executable(csvcheck src/csvcheck.c)

add_executable(csvcount src/csvcount.c)

add_executable(csvcut src/csvcut.c)

add_executable(csvfix src/csvfix.c)

add_executable(csvgrep src/csvgrep.c)



SET (CSVUTILS_INSTALL_BIN_DIR bin)
SET (CSVUTILS_INSTALL_LIB_DIR lib${LIB_SUFFIX})
SET (CSVUTILS_INSTALL_INCLUDE_DIR include)
SET (CSVUTILS_INSTALL_DATA_DIR share)

SET(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX})


INSTALL(
    TARGETS 
      csvbreak csvcheck csvcount csvcut csvfix csvgrep
    RUNTIME DESTINATION ${CSVUTILS_INSTALL_BIN_DIR} 
)

#IF(BUILD_TESTING)
#ENDIF(BUILD_TESTING)


# according to http://www.cmake.org/pipermail/cmake/2011-November/047137.html it's better to put this in the end
INCLUDE(CPack)
